update swagger and connect db
